manifests/tracearr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracearr
  namespace: jovian-prod
spec:
  selector:
    app: tracearr
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
